kubernetes/xray-daemon-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: xray-daemon
  name: xray-daemon
spec:
  ports:
    - name: "2000"
      port: 2000
      protocol: UDP
      targetPort: 2000
  selector:
    io.kompose.service: xray-daemon
status:
  loadBalancer: {}
